--- a/Doku/Bericht/main.tex
+++ b/Doku/Bericht/main.tex
@@ -92,7 +92,7 @@ Low-Power Wakeup Receiver}
 %\Large{with Rotation, GPS and On-Board-Diagnostics Sensor Data}
 \end{flushright}
 \begin{flushright}
-{\Large Semester Thesis 2019}
+{\Large Semester Thesis}
 \end{flushright}
 \HRule
 
@@ -139,7 +139,7 @@ HSR Hochschule Für Technik Rapperswil
 \input{6-summary/6-summary.tex}
 
 %bibliography
-\chapter*{Sources}
+\chapter*{References}
 \addcontentsline{toc}{chapter}{Sources} 
 \printbibliography[heading=none]
 
