--- a/Doku/Bericht/Appendix/appendix.tex
+++ b/Doku/Bericht/Appendix/appendix.tex
@@ -37,3 +37,10 @@
 		\includegraphics[trim= 0cm 0cm 0cm 0cm,page=5,width=22.56cm]{../Pflichtenheft/HSR_SRS_main.pdf}
 	\end{figure}
 \end{landscape}
+
+\begin{landscape}
+	\begin{figure}[H]
+		\centering
+		\includegraphics[trim= 0cm 0cm 0cm 0cm,width=22.56cm]{4-development/hardware/graphics/PowerLatch/PwrLatch_V1_sch.pdf}
+	\end{figure}
+\end{landscape}
