Gelesen bis seite 21

--- a/Doku/Bericht/2-theory/e-paper-display/graphics/epaper_mikroskop.tex
+++ b/Doku/Bericht/2-theory/e-paper-display/graphics/epaper_mikroskop.tex
@@ -27,8 +27,8 @@
 \draw[-<, line width=\TH, mc] (\C) -- +(\ANG:\R+2*\TH+\ARR/2);
 \draw[line width=\TH, mc] (\C) -- +(\ANG:1.1);
 \draw[-<, line width=\TH, mc] (\C) -- +(\ANG+180:\R+2*\TH+\ARR/2);
-\draw[line width=\TH, mc] (\C) -- +(\ANG+180:8.5);
-\node[rotate=\ANG,font=\Huge, mc] at (-1.4,2.35) {0.02 mm - 0.04 mm};
+\draw[line width=\TH, mc] (\C) -- +(\ANG+180:9.5);
+\node[rotate=\ANG,font=\Huge, mc] at (-1.6,2.45) {\textbf{0.02 mm - 0.04 mm}};
 
 \end{tikzpicture}
 \end{document}
