--- a/Doku/Bericht/references.bib
+++ b/Doku/Bericht/references.bib
@@ -9,6 +9,14 @@
 }
 
 %%Online-------------------------------------------------------------------------------------------------------
+@online{waveshare,
+	organisation = {waveshare},
+	title =  {{9.7inch e-Paper HAT}},
+	url = {https://www.waveshare.com/wiki/9.7inch_e-Paper_HAT},
+	keywords = {online}
+}
+
+
 
 %%Abbildungen-------------------------------------------------------------------------------------------------------
 %%Techreport-----------------------------------------------------------------------------------------------------
