--- a/Doku/Bericht/0-abstract/0-abstract.tex
+++ b/Doku/Bericht/0-abstract/0-abstract.tex
@@ -1,7 +1,9 @@
 \chapter*{Abstract}
 
 \section*{Introduction}
-Today, companies, universities and similar facilities, are using a simple sign next to the entrance of a room to display its occupancy schedule. In more modern buildings, the schedule is presented on a screen; however, most of the buildings still use schedules printed on paper. This approach creates the infeasibility to take spontaneous changes into account, as every minor modifications leads to a newly printed schedule. Additionally, buildings that already use displays have the obstacle of the initial installation of the device, which entails extensive installation work by connecting it to the power grid. One solution could be to replace the power grid by batteries, which would lead to additional costs of the batteries (due to frequent replacement) plus the human labour costs (as employers have to change the batteries). The disadvantages outlined above could be avoided by using a screen (following named “E-Paper Display” or EPD) that harvests its energy from indoor lightening. Additional to this self-sufficient method, the screen would also up-date via a wireless interface, providing the opportunity to take short-term changes into consideration and display a timely room schedule. 
+In company buildings, universities and other similar facilities, it is usual to attach occupancy schedules next to a room entrance. These schedules are most of the time printed on paper, or in more modern buildings, displayed on a screen. Using paper, it is impracticable to take short-term changes into account, since every adjustment needs to be made by printing a new schedule. Hence, screens need to be connected to the power grid, which entails extensive installation work, or powered by a battery, which needs to be replaced from time to time. All these disadvantages could be avoided by using a screen which harvests its energy from the indoor lightning, and is updated via a wireless interface.
+
+
 
 \section*{Approach}
 The system is powered by a energy storage system that uses solar cells to harvest energy. This energy will then be stored in a super-capacitor to ensure minimal power leakage. As this specific type of energy harvesting unit cannot provide vast amounts of energy over a longer time period, the whole system fully runs in short bursts. One solution introduced to save energy is by using an E-Paper Display (EPD). The EPD only uses energy when updating its screen but not for maintaining, the image displayed on the screen, which results in a high energy reduction.   Furthermore, in addition to the EPD a constantly listening ultra-low power wakeup receiver is used. This will further enhance the system, as it will generate an interruption to enable the power supply of the remaining system only when receiving a specific wakeup sequence. The remaining part then receives data via Bluetooth, which will then display the data and eventually cuts its own power supply to enter a new cycle of low-power listening mode.
