--- a/Doku/Bericht/1-intro/1-intro.tex
+++ b/Doku/Bericht/1-intro/1-intro.tex
@@ -1,17 +1,20 @@
 \chapter{Introduction}
-\textbf{Sicher ned eifach 2x mal s gliche schriebe?}
-Today, companies, universities and similar facilities, are using a simple sign next to the entrance of a room to display its occupancy schedule. In more modern buildings, the schedule is presented on a screen; however, most of the buildings still use schedules printed on paper. This approach creates the infeasibility to take spontaneous changes into account, as every minor modifications leads to a newly printed schedule. Additionally, buildings that already use displays have the obstacle of the initial installation of the device, which entails extensive installation work by connecting it to the power grid. One solution could be to replace the power grid by batteries, which would lead to additional costs of the batteries (due to frequent replacement) plus the human labour costs (as employers have to change the batteries). The disadvantages outlined above could be avoided by using a screen (following named “E-Paper Display” or EPD) that harvests its energy from indoor lightening. Additional to this self-sufficient method, the screen would also up-date via a wireless interface, providing the opportunity to take short-term changes into consideration and display a timely room schedule.  
+Today, companies, universities and similar facilities, are using a simple sign next to the entrance of a room to display its occupancy schedule. In more modern buildings, the schedule is presented on a screen; however, most of the buildings still use schedules printed on paper. This approach creates the infeasibility to take spontaneous changes into account, as every minor modifications leads to a newly printed schedule. Additionally, buildings that already use displays have the obstacle of the initial installation of the device, which entails extensive installation work by connecting it to the power grid. One solution could be to replace the power grid by batteries, which would lead to additional costs of the batteries (due to frequent replacement) plus the human labour costs (as employers have to change the batteries). The disadvantages outlined above could be avoided by using a screen (following named “E-Paper Display” or EPD) that harvests its energy from indoor lightening. Additional to this self-sufficient method, the screen would also up-date via a wireless interface, providing the opportunity to take short-term changes into consideration and display a timely room schedule. 
 
+In this semester thesis, a device has been developed which will be further outlined in the following six sections. 
+In the first chapter, the task analysis as well as its approach will be evaluated. In the second chapter, the theories around the device are described in more detail.
+The third chapter, looks at the evaluation of the wakeup receiver as well as the microcontroller.
+The fourth chapter contains the development of the hardware and software part.
+The fifth chapter presents the results followed by a conclusion. 
 
 \section{Task analysis}
 The primary goal of this semester thesis was to create a prototype by combining both benefits of the paper method and the screen powered by battery. Moreover, the aim was to avoid an expensive initial installation by introducing a method that makes it possible to up-date the room schedule via a wireless interface. However, it should still be possible to place the new screen in the desired location equal to the paper schedule. Finally, to guarantee the device would consume the smallest amount power possible, the microcontroller, display and interface should be switched off when not in usage.  
 
-
 \section{Approach}
 In order to clarify the application of the terms in the following sections, the term “receiver” is used for the display including all its components. Additionally, the term “transmitter” is used for the computer and its additional hardware. Henceforth, it has to be stated that this does not imply that the communication is uni-directional. The receiver as well as the transmitter should be able to receive and transmit data. It should rather suggest that the general data transfer appears from the computer to the screen. 
 
-\paragraph{Transmitter}
+\subsection{Transmitter}
 This end solely consists of a computer, a wireless interface (for the main communication) and the transmitter module (for the wakeup receiver). A short python script enables the user to define which data the receiver should display over a fixed template. The information is transferred to a wireless interface, which transmits it to the receiver end after the receiver is woken up.
 
-\paragraph{Receiver}
-This part of the prototype has been designed to reduce the power consumption as far as possible. Therefore, ans \acs{epd} is used, which has the advantage of being a static display (it maintains its screen image even when disconnected from the power supply). In combination with the \acs{epd} a wireless module receives information from the transmitter. It can also response with a feedback about the status. This connection should be bi-directional. In order to process the incoming data and displaying it correctly on the screen, a microcontroller is used. All the above mentioned components  are completely disconnected from the power supply when not used. The power is provided by a super capacitor which is charged by solar cells. When the device  is switched off the only component that actively consumes power is the wakeup receiver. This module is constantly in listening mode and waits for a wakeup event. If the wakeup receiver is given such an event, it activates a self-holding circuit resulting in the connection to the power supply of all other components. Now data can be exchanged through a different channel, established by the wireless module. After the data is processed and the display is refreshed, the microcontroller deactivates the self-holding and therefore disconnects all components except the wakeup receiver from the power source.
+\subsection{Receiver}
+This part of the prototype has been designed to reduce the power consumption as far as possible. Therefore, ans \acs{epd} is used, which has the advantage of being a static display (it maintains its screen image even when disconnected from the power supply). In combination with the \acs{epd} a wireless module receives information from the transmitter. It can also response with a feedback about the status. This connection is bi-directional. In order to process the incoming data and displaying it correctly on the screen, a microcontroller is used. All components  are completely disconnected from the power supply when not used. The power is provided by a super capacitor, which is charged by solar cells. When the device is switched off, the only component that actively consumes power is the wakeup receiver. This module is constantly in listening mode and waits for a wakeup event. If the wakeup receiver is given such an event, it activates a self-holding circuit resulting in the connection to the power supply of all other components. Now data can be exchanged through a different channel, established by the wireless module. After the data is processed and the display is refreshed, the microcontroller deactivates the self-holding and therefore disconnects all components except the wakeup receiver from the power source.
