--- a/Doku/Bericht/3-evaluation/3-evaluation.tex
+++ b/Doku/Bericht/3-evaluation/3-evaluation.tex
@@ -15,14 +15,14 @@ More important features on the receiver end are:
 	\item[-] Current consumption in 3-channel listening mode $2.3\,\mu\text{A}$
 	\item[-] Operating supply range $2.4\,\text{V}-3.6\,\text{V}$
 	\item[-] Three antennas (enables 3D detection)
-	\item[-] Channels  individually selective to reduce power consumption
+	\item[-] Channels individually selective to reduce power consumption
 \end{itemize}
 The low power consumption makes it possible to run the receiver in listening mode below $8.3\,\mu\text{W}$\cite{as3933}.
 
 The demo kit comes with a \acs{gui}, which enables the user to set the parameters as desired and address the registers directly.
 The range of the receiver of about 6\,m as first measurement turns out to be very limited.
 Even with a 3db sensitivity boost on the receiver side, it is only possible to detect wakeup events from a distance of 9\,m.
-The environment (indoor, outdoor) seems to make no huge difference.
+The environment (indoor, outdoor) seems to make no observable difference.
 
 As a result, the limited range makes the AS3933 unusable for the prototype. 
 
@@ -38,14 +38,14 @@ The most important features are:
 	\item[-] Energy consumption $3\,\mu\text{A}$ at $1.5\,\text{V}$ (data rate 1 kbit/s)
 	\item[-] Unidirectional data transfer possible	
 \end{itemize}
-The power consumption therefore is in listening mode (data rate = 1 kb/s) $4.5\,\mu\text{W}$.
+Therefore, the power consumption in listening mode (data rate = 1 kb/s) is $4.5\,\mu\text{W}$.
 
-Just as the AS3933, the RFicient demo kit comes with a \acs{gui}, which enables the user to set the important parameters and access the register \cite{rficient}.
+Just as the AS3933, the RFicient demo kit comes with a \acs{gui}, which enables the user to set the important parameters and access the registers \cite{rficient}.
 First measurements showed that the range of the RFicient is far higher than the range of the AS3933.
 It is therefore used in the prototype.
 
 \section{Microcontroller}
-To the handle incoming data and write it to the display driver, some kind of microcontroller is needed.
+To process incoming data and write it to the display, some kind of microcontroller is needed.
 A derivate of the MSP430 and one of the STM32 were looked at more closely.
 
 \subsection{MSP430}
@@ -53,29 +53,31 @@ The MSP430FR6989 was up for selection because it is specifically developed for u
 It's main features are:
 \begin{itemize}
 	\item[-] 16-bit architecture with up to 16\,MHz clock
-	\item[-] Supply voltage range form 1.8\,V to 3.6\,V
+	\item[-] Supply voltage range from 1.8\,V to 3.6\,V
 	\item[-] Approximately  $100\,\mu\text{A}/\text{MHz}$ current consumption in active mode
 	\item[-] 128\,KB \acf{fram}
 \end{itemize}
 The display driver chip can be controlled over \acs{spi}  \cite{msp430}.
 
 During development, it turned out to be very useful to store a complete image.
-The required memory to do this assuming 16 grey levels and a $1200\times 825$ size display is:
+The required memory to do this, assuming 16 grey levels and a $1200\times 825$ size display is:
 $$M = 1200\cdot 825\cdot4\,\text{bit}=495'000\,\text{B} < 484\,\text{kB}.$$
 Therefore is the \acs{fram} not sufficient.
 This is the main reason, why a different microcontroller is needed.
 
 \subsection{STM32}
-The STM32L4R5ZI by STMircoelectronics is just like the MSP430 developed for low-power applications.
+The STM32L4R5ZI by STMircoelectronics was just like the MSP430 developed for low-power applications.
 The most important features are:
 \begin{itemize}
 	\item[-] 32-bit Cortex-M4 \acs{cpu}
 	\item[-] Several clock sources between 4 and 48\,MHz
+	\item[-] Maximum clock up to 120\,MHz
 	\item[-] 1.71\,V - 3.6\,V input voltage supply
 	\item[-] $110\,\mu \text{A}/\text{MHz}$ current consumption in run mode
 	\item[-] 2\,MB Flash and 640\,KB \acs{sram}
 \end{itemize}
-The display driver can again be controlled over \acs{spi} \cite{stm32}.
+The display can again be controlled over \acs{spi}.
+Additional to the \acs{spi}, an integrated LCD-TFT controller unit could be used to control the display in a parallel mode \cite{stm32}.
 
 The STM32 is in general more flexible and, most importantly, has enough memory for a complete picture.
 That it consumes slightly more power than the MSP430 should not be to much of a problem, since it is only in run mode for a few seconds, before being completely switched off again.
